# quanta

./: .gitignore  CONTINUATION.md  CONTRIBUTING.md  Cargo.toml  LICENSE-APACHE  LICENSE-MIT  README.md  justfile  rust-toolchain.toml
.githooks/: pre-commit
crates/gpu/quanta-core/: Cargo.toml
crates/lang/quanta-dsl-core/: Cargo.toml  build.rs
crates/ml/quanta-autograd/: Cargo.toml  README.md
crates/ml/quanta-nn/: Cargo.toml  PARITY.md
crates/ml/quanta-nn-derive/: Cargo.toml
crates/quanta-array/: Cargo.toml  README.md
crates/quanta-array/src/: array.rs  astype.rs  broadcast.rs  concat.rs  construct.rs  conv.rs  distance.rs  eigh.rs  embedding.rs  error.rs  gather.rs  gather_dim.rs  index.rs  lib.rs  linalg.rs  pad.rs  pca.rs  pool.rs  reduce.rs  reduce_axis.rs  scalar.rs  scan.rs  ufunc.rs  upsample.rs
crates/quanta-array/tests/: astype.rs  broadcast.rs  compare.rs  concat.rs  construct.rs  conv.rs  distance.rs  eigh.rs  embedding.rs  gather.rs  gather_last.rs  index.rs  kmeans.rs  large_dispatch.rs  linalg.rs  monte_carlo.rs  narrow.rs  pad.rs  pca.rs  pool.rs  reduce.rs  scan.rs  sum_axis.rs  ufunc.rs  upsample.rs
crates/quanta-autograd/: Cargo.toml  README.md
crates/quanta-autograd/examples/: cnn_training.rs  mlp_training.rs  vulkan_cpu_diff.rs
crates/quanta-autograd/src/: attention.rs  conv.rs  lib.rs  loss.rs  ops.rs  optim.rs  pool.rs  rope.rs  scalar.rs  tape.rs  vjp.rs
crates/quanta-autograd/tests/: gradcheck.rs  optim.rs  training.rs  transformer.rs
crates/quanta-bench/: Cargo.toml
crates/quanta-bench/src/: compare.rs  json.rs  main.rs
crates/quanta-blas/: Cargo.toml  PERFORMANCE.md  README.md
crates/quanta-blas/benches/: gemm.rs  level1.rs
crates/quanta-blas/src/: cholesky.rs  eigh.rs  gemm.rs  level1.rs  level2.rs  lib.rs  lu.rs  mixed.rs  mixed_kernel.rs  mixed_quant.rs  mixed_tc.rs  params.rs  qr.rs  reference.rs  svd.rs  symm.rs  syr2k.rs  syrk.rs  triangular.rs  trmm.rs
crates/quanta-blas/tests/: blas_l3.rs  eigh.rs  gemm.rs  gemm_mixed.rs  gemm_quant.rs  gemm_tc.rs  gemv.rs  level1.rs  lu.rs  qr.rs  triangular.rs
crates/quanta-codegen/: Cargo.toml
crates/quanta-codegen/src/: emit_krust.rs  emit_lean.rs  emit_rust.rs  emit_ts.rs  lib.rs  parse.rs
crates/quanta-compiler/: Cargo.toml  build.rs
crates/quanta-compiler/src/: emit_llvm.rs  emit_msl.rs  emit_spirv.rs  emit_wgsl.rs  main.rs  metallib.rs  metallib_tests.rs  pipeline.rs  rustc_compile.rs  shader_parity_tests.rs  shader_pipeline.rs  targets.rs  to_llvm.rs
crates/quanta-compute-dsl/: Cargo.toml
crates/quanta-compute-dsl/src/: auto_dispatch.rs  compile_via_wasm.rs  device_macro.rs  gpu_type.rs  kernel_macro.rs  lib.rs
crates/quanta-core/: Cargo.toml  README.md
crates/quanta-core/src/: api.rs  driver.rs  lib.rs
crates/quanta-dsl/: Cargo.toml  build.rs
crates/quanta-dsl/src/: compiler.rs  kernel_macro.rs  lib.rs  shader_macro.rs  uniforms_derive.rs  wasm_compile.rs
crates/quanta-fft/: Cargo.toml  README.md
crates/quanta-fft/src/: bluestein.rs  fft.rs  fft2.rs  lib.rs  plan.rs  reference.rs  rfft.rs
crates/quanta-fft/tests/: denoise.rs  fft.rs  fft2.rs  rfft.rs
crates/quanta-ir/: Cargo.toml
crates/quanta-ir/src/: caps.rs  const_analysis.rs  dispatch_fold.rs  dtype.rs  dtype_codegen.rs  emit_caps.rs  emit_msl.rs  emit_spirv.rs  emit_wgsl.rs  lib.rs  op_matrix_cases.rs  output.rs  quant.rs  scope_check.rs  serial.rs  shader.rs  types.rs  validate.rs  wire.rs
crates/quanta-ir/tests/: emit_msl_loop_unroll.rs  emit_msl_mutable_regs.rs  emit_msl_texture_storage.rs  emit_shared_atomics.rs  emit_spirv_bool_cast.rs  emit_spirv_bool_mask.rs  emit_spirv_cmp_opcodes.rs  emit_spirv_float64_capability.rs  emit_spirv_int_signedness.rs  emit_spirv_loop_unroll.rs  emit_spirv_narrow_storage.rs  emit_spirv_numeric_cast.rs  emit_spirv_subgroup_opcodes.rs  emit_spirv_texture_storage.rs  emit_wgsl_jit.rs  proptest_ir.rs  roundtrip.rs
crates/quanta-macros/: Cargo.toml
crates/quanta-macros/src/: auto_dispatch.rs  compile_via_wasm.rs  compiler.rs  device_macro.rs  diff_test.rs  fields_derive.rs  kernel_macro.rs  kernel_signature.rs  kernel_type_inference.rs  lib.rs  parse.rs  validate.rs  vertex_derive.rs  wasm_compile.rs  wasm_twin.rs
crates/quanta-prims/: CHANGELOG.md  COOKBOOK.md  Cargo.toml  GETTING_STARTED.md  PERFORMANCE.md  README.md
crates/quanta-prims/examples/: bench_throughput.rs  block_sum.rs  bucket_sort.rs  cpu_oracle.rs  prefix_scan.rs
crates/quanta-prims/src/: device_wide.rs  gpu_kernel.rs  lib.rs  reference.rs
crates/quanta-prims/tests/: block_compact.rs  block_histogram.rs  block_radix_sort_kv.rs  block_reduce_correctness.rs  block_reduce_family.rs  block_reduce_tree.rs  block_scan.rs  block_segmented.rs  block_segmented_sort.rs  block_sort.rs  block_sort_kv.rs  device_wide.rs  device_wide_software.rs
crates/quanta-rand/: COOKBOOK.md  Cargo.toml  GETTING_STARTED.md  README.md
crates/quanta-rand-import-test/: Cargo.toml
crates/quanta-rand-import-test/src/: lib.rs
crates/quanta-rand/examples/: bench_distributions.rs  bench_vs_rand.rs  dropout_mask.rs  fill_buffer.rs  monte_carlo_pi.rs
crates/quanta-rand/src/: gpu_kernel.rs  lib.rs  philox4x32.rs  threefry4x32.rs  xoshiro128pp.rs
crates/quanta-rand/tests/: correctness.rs  cpu_api.rs  gpu_backend_bitexact.rs  ks_goodness_of_fit.rs  philox_kat.rs  poisson_large_lambda.rs  ptrd_cpu_smoke.rs  ptrd_host_oracle.rs  uniform_fill_correctness.rs
crates/quanta-render/: Cargo.toml  README.md
crates/quanta-render-dsl/: Cargo.toml
crates/quanta-render-dsl/src/: lib.rs  shader_macro.rs  vertex_derive.rs
crates/quanta-render/src/: gpu_ext.rs  lib.rs  mesh_shader.rs  render_builder.rs  surface_wrap.rs
crates/quanta-render/tests/: smoke_render_surface.rs
crates/quanta-tensor/: CHANGELOG.md  COOKBOOK.md  Cargo.toml  GETTING_STARTED.md  README.md
crates/quanta-tensor/examples/: broadcast_bias.rs
crates/quanta-tensor/src/: layout.rs  layout_test.rs  lib.rs
crates/quanta-wasm-lowering/: Cargo.toml
examples/headless_compute/: Cargo.toml
examples/web_add_one/: Cargo.toml  index.html
(+1087 files in other folders)
