[workspace]
members = [
    ".",
    "crates/quanta-core",
    "crates/quanta-ir",
    "crates/quanta-dsl",
    "crates/quanta-compiler",
    "crates/quanta-bench",
    "crates/quanta-cli",
    "crates/quanta-codegen",
    "crates/quanta-wasm-lowering",
    "crates/quanta-rand",
    "crates/quanta-rand-import-test",
    "crates/quanta-tensor",
    "crates/quanta-prims",
    "crates/quanta-render",
    "crates/quanta-array",
    "crates/quanta-blas",
    "crates/quanta-autograd",
    "crates/quanta-fft",
    "examples/headless_compute",
    "examples/web_add_one",
    "examples/web_triangle",
    "examples/web_textured",
    "examples/web_diff",
]

[workspace.package]
version = "0.1.0-alpha.2"
edition = "2024"
rust-version = "1.85"
license = "MIT OR Apache-2.0"
repository = "https://github.com/zelez-lab/quanta"

[workspace.dependencies]
quanta-core = { path = "crates/quanta-core", version = "0.1.0-alpha.2", default-features = false }
quanta-ir = { path = "crates/quanta-ir", version = "0.1.0-alpha.2" }
quanta-tensor = { path = "crates/quanta-tensor", version = "0.1.0-alpha.2" }
quanta-wasm-lowering = { path = "crates/quanta-wasm-lowering", version = "0.1.0-alpha.2" }

[package]
name = "quanta"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
description = "GPU compute and rendering API — quarks, protons, nuclei, fields"
keywords = ["gpu", "compute", "shader", "metal", "vulkan"]
categories = ["graphics", "hardware-support"]
readme = "README.md"

[features]
default = ["metal", "render", "compute"]
std = ["quanta-core/std", "quanta-render?/std"]
metal = ["std", "quanta-core/metal", "quanta-render?/metal"]
vulkan = ["std", "quanta-core/vulkan", "quanta-render?/vulkan"]
## Rendering face: render passes, graphics pipelines, mesh/tessellation/
## ray-tracing, VRS, render-bundle ICB, and texture-as-render-target
## helpers. On by default. A headless compute consumer builds with
## `--no-default-features --features "metal compute jit"` to compile zero
## render code and expose a render-free surface. The `quanta-render`
## crate enables this and adds the `RenderGpu` ergonomic extension
## trait. (Step 085.)
render = ["quanta-core/render", "quanta-dsl/render", "dep:quanta-render"]
## Compute face: `#[quanta::kernel]` / `#[quanta::device]` macros, `Wave`
## dispatch, batches, compute ICBs, queue dispatch, the scan library and
## the kernel-language types. On by default, symmetric to `render`. A
## render-only consumer (e.g. `quanta-render`'s lib build) omits it to
## compile zero kernel machinery and drop the wasm-lowering dependency
## from the graph.
compute = ["quanta-core/compute", "quanta-dsl/compute"]
## CPU software driver: execute KernelDef IR without GPU hardware.
## Implies `compute` — the driver's whole job is executing kernels.
software = ["std", "jit", "compute", "quanta-core/software", "quanta-render?/software"]
## Enable JIT compilation: runtime shader emission from embedded KernelDef IR.
## Also exposes the op-matrix case generator shared with the test harness.
jit = ["quanta-ir/jit", "quanta-ir/op-matrix-cases", "quanta-core/jit"]
## WebGPU driver, browser-only (target_arch = "wasm32"). Wired to the
## browser via Quanta's own ABI (bare `extern "C"` blocks under
## `src/driver/webgpu/ffi.rs` plus a TypeScript-authored
## `web/src/quanta.ts` compiled to `quanta.js`). Step 000 / B⁰ policy:
## no external wrapper crate is permitted (no `ash`, `metal-rs`, `objc`,
## `web-sys`, `wgpu`, `wasm-bindgen` runtime). The wasm output ships
## zero npm dependencies — `quanta.js` (+ sibling helper modules) is
## the only JS the browser loads. Implies `compute` (the driver
## dispatches waves; compute-free WebGPU builds are a Phase-2b concern).
webgpu = ["std", "jit", "compute", "quanta-core/webgpu", "quanta-render?/webgpu"]

[dependencies]
quanta-core.workspace = true
quanta-dsl = { path = "crates/quanta-dsl", version = "0.1.0-alpha.2", default-features = false }
quanta-ir.workspace = true
quanta-render = { path = "crates/quanta-render", version = "0.1.0-alpha.2", default-features = false, optional = true }

[dev-dependencies]
proptest = "1"
