[package]
name = "quanta-autograd"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
description = "Reverse-mode automatic differentiation for Quanta — tape-based VJP over Array<T> (the tier-2 differentiation primitive ML consumers build on). VJP rules proven analytic in specs/verify/lean/Quanta/Autograd."
keywords = ["gpu", "autograd", "autodiff", "gradient", "backprop"]
categories = ["mathematics", "science"]

[lib]
name = "quanta_autograd"
path = "src/lib.rs"

[features]
# Backend forwarded to quanta-array (which forwards to quanta/-prims/-blas).
# `software` is the CPU-JIT lane used for differential gradient-check tests.
default = ["software"]
software = ["quanta-array/software"]
metal = ["quanta-array/metal"]
vulkan = ["quanta-array/vulkan"]

[dependencies]
quanta = { path = "../..", version = "0.1.0-alpha.2", default-features = false }
quanta-array = { path = "../quanta-array", version = "0.1.0-alpha.2", default-features = false }
quanta-blas = { path = "../quanta-blas", version = "0.1.0-alpha.2", default-features = false }

[dev-dependencies]
quanta = { path = "../..", version = "0.1.0-alpha.2", default-features = false, features = [
    "software",
] }
