[package]
name = "quanta-blas"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "Verified-numerics BLAS for Quanta — Level-1/2/3 with mechanically-proven forward-error bounds"
readme = "README.md"

[lib]
name = "quanta_blas"
path = "src/lib.rs"

[features]
default = []
# `gpu` pulls in the Quanta runtime + the `#[quanta::kernel]` / JIT path.
# Off by default so the crate doubles as a pure-Rust reference library
# (the differential-test oracle). `gpu` alone gives the software CPU
# backend; pick a backend-specific feature below for a real GPU.
gpu = ["dep:quanta-core", "dep:quanta-compute-dsl", "quanta-prims/gpu"]
gpu-metal = ["gpu", "quanta-core/metal", "quanta/metal", "quanta-prims/gpu-metal"]
gpu-vulkan = ["gpu", "quanta-core/vulkan", "quanta/vulkan", "quanta-prims/gpu-vulkan"]

[dependencies]
# Library depends on the split crates, not the `quanta` facade —
# `quanta-core` for runtime types + `GpuType`, `quanta-compute-dsl` for
# the `#[quanta::kernel]` macros (invoked with `crate = quanta_core`).
quanta-core = { path = "../quanta-core", default-features = false, features = [
    "software",
], optional = true }
quanta-compute-dsl = { path = "../quanta-compute-dsl", optional = true }
quanta-ir = { path = "../quanta-ir" }
quanta-prims = { path = "../quanta-prims" }

[dev-dependencies]
# The `quanta` facade is dev-only (tests call `quanta::init()`); the
# dev-dep cycle is permitted where a normal dep would not be.
quanta = { path = "../..", default-features = false, features = ["software"] }

[[bench]]
name = "level1"
harness = false
required-features = ["gpu"]

[[bench]]
name = "gemm"
harness = false
required-features = ["gpu"]
