[package]
name = "quanta-codegen"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
description = "Quanta WebIDL → Rust + TypeScript codegen (B′)"

[lib]
name = "quanta_codegen"
path = "src/lib.rs"

[dependencies]
# WebIDL parser. Dev-only crate, so vendored deps are fine here — the
# user-facing wasm output never reaches `quanta-codegen`.
weedle = "0.13"
# Rust parser for the E.6 KRust view emitter — same `syn` the proc
# macro already uses, so the parsed-AST shape stays in lockstep.
syn = { version = "2", features = ["full"] }
