[package]
name = "quanta-compiler"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
description = "Quanta kernel compiler — KernelIR to GPU ISA (AMD GCN, NVIDIA PTX, SPIR-V, MSL, WGSL)"
keywords = ["gpu", "compiler", "shader", "llvm", "ptx"]
categories = ["compilers", "command-line-utilities"]

[dependencies]
quanta-ir = { workspace = true, features = ["jit"] }

# macOS: link dynamically to Homebrew's libLLVM.dylib. Static link
# is broken on `brew install llvm@22` — Homebrew ships .dylib but
# omits some static archives (CodeGenTargetMachineImpl,
# MCRegisterInfo). Mac users who need the AOT compiler already have
# `brew install llvm@22` per the README.
[target.'cfg(target_os = "macos")'.dependencies]
inkwell = { version = "0.9", features = ["llvm22-1-force-dynamic"] }

# Linux + Windows: link statically so the released binary has no
# runtime libLLVM.so / libLLVM.dll dependency. Users on a stock
# Ubuntu / fresh Windows VM can run quanta-compiler without
# installing LLVM 22 first. Binary grows to ~50-150 MB but is
# self-contained — the right tradeoff for a redistributable tool.
[target.'cfg(not(target_os = "macos"))'.dependencies]
inkwell = { version = "0.9", features = ["llvm22-1-force-static"] }
