[package]
name = "quanta-compiler"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
description = "Quanta kernel compiler — KernelIR to GPU ISA (AMD GCN, NVIDIA PTX, SPIR-V, MSL, WGSL)"
keywords = ["gpu", "compiler", "shader", "llvm", "ptx"]
categories = ["compilers", "command-line-utilities"]

[dependencies]
quanta-ir = { workspace = true, features = ["jit"] }

# Dynamic link to libLLVM on every platform. Static linking was
# attempted (commit 386befd → 9e4a562) but each platform fights the
# LLVM packaging ecosystem at a different step:
#   - macOS Homebrew: missing CodeGenTargetMachineImpl,
#     MCRegisterInfo static archives.
#   - Linux apt.llvm.org: Polly is integrated into libLLVM in 18+;
#     llvm-sys still asks for libPolly.a which no longer exists.
#   - Windows MSYS2: libffi/pthread/libmingwex symbol mismatches
#     against rust-mingw's sysroot.
# The JIT fallback in the macro means users without LLVM 22
# installed just transparently use the runtime path — same correct
# results, no AOT binary embedded. Documented in README.
inkwell = { version = "0.9", features = ["llvm22-1-force-dynamic"] }
