[package]
name = "quanta-dsl"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
description = "Proc macros for Quanta GPU kernels — #[quanta::kernel]"
keywords = ["gpu", "compute", "kernel", "macro", "shader"]
categories = ["graphics", "development-tools::procedural-macro-helpers"]

[lib]
proc-macro = true

[features]
# Both faces on by default so a bare `cargo build -p quanta-dsl` covers
# the full macro surface; the root `quanta` crate depends on this crate
# with `default-features = false` and forwards its own `render` /
# `compute` features explicitly.
default = ["render", "compute"]
# Gates the render-stage macros (vertex / fragment / tess_* / task /
# mesh / ray_gen / closest_hit / miss / derive(Vertex)).
render = []
# Gates the compute-face macros (#[quanta::kernel] / #[quanta::device] /
# #[quanta::shared] / import_devices! / gpu_type / derive(Fields) /
# derive(Uniforms)) and the rustc → wasm32 → KernelOps lowering pipeline
# behind them. Pulls the WASM lowerer only when enabled.
compute = ["dep:quanta-wasm-lowering"]

[dependencies]
syn = { version = "2", features = ["full", "visit", "visit-mut"] }
quote = "1"
proc-macro2 = "1"
quanta-ir.workspace = true
# Used by `compile_via_wasm` (slice 5c bridge) to call into the
# WASM lowerer directly. Load-bearing for every kernel build —
# compute-face only, so render-only consumers don't compile it.
quanta-wasm-lowering = { workspace = true, optional = true }
