[package]
name = "quanta-ir"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
description = "Quanta kernel intermediate representation — shared between proc macro and compiler"
keywords = ["gpu", "compiler", "ir", "shader", "kernel"]
categories = ["compilers", "graphics"]

[lints.rust]
unexpected_cfgs = { level = "warn", check-cfg = ['cfg(kani)'] }

[features]
default = []
## Enable runtime emitters (SPIR-V + MSL) for JIT compilation.
jit = []

[dependencies]
