[package]
name = "quanta-ir"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
description = "Quanta kernel intermediate representation — shared between proc macro and compiler"
keywords = ["gpu", "compiler", "ir", "shader", "kernel"]
categories = ["compilers", "graphics"]

[lints.rust]
unexpected_cfgs = { level = "warn", check-cfg = ['cfg(kani)'] }

[features]
default = []
## Enable runtime emitters (SPIR-V + MSL) for JIT compilation.
jit = []
## Expose the per-op differential matrix case generator, shared by the
## op_matrix test harness and the WGSL browser audit (examples/web_diff).
op-matrix-cases = []

[dev-dependencies]
proptest = "1"

[dependencies]
