[package]
name = "quanta-macros"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
description = "Proc macros for Quanta GPU kernels — #[quanta::kernel]"
keywords = ["gpu", "compute", "kernel", "macro", "shader"]
categories = ["graphics", "development-tools::procedural-macro-helpers"]

[lib]
proc-macro = true

[dependencies]
syn = { version = "2", features = ["full", "visit", "visit-mut"] }
quote = "1"
proc-macro2 = "1"
quanta-ir.workspace = true
# Used by `compile_via_wasm` (slice 5c bridge) to call into the
# WASM lowerer directly. Once the cutover lands this becomes
# load-bearing for every kernel build.
quanta-wasm-lowering.workspace = true
