[package]
name = "quanta-prims"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "Block-cooperative GPU primitives for Quanta — reduce, scan, sort, and warp utilities"
readme = "README.md"

[lib]
name = "quanta_prims"
path = "src/lib.rs"

[features]
default = []
# `gpu` feature pulls in the Quanta runtime and exposes the
# `#[quanta::kernel]` entry points + device-callable primitives.
# Off by default so the crate is usable as a pure-Rust reference
# library (correctness oracle for downstream tests).
#
# The `gpu` feature alone gives you the software CPU JIT backend,
# which is single-threaded and not useful for cooperative
# primitives. For real-GPU demos pick one of the backend-specific
# convenience features below.
gpu = ["dep:quanta"]

# Convenience: pull in a real GPU backend so the examples in
# this crate can call `quanta::init()?` successfully. Pick the
# one matching your host.
gpu-metal = ["gpu", "quanta/metal"]
gpu-vulkan = ["gpu", "quanta/vulkan"]

[dependencies]
quanta = { path = "../..", default-features = false, features = ["software"], optional = true }

# Three of the four examples need a real GPU backend (cooperative
# primitives don't degrade gracefully to single-thread). They
# skip with a "no GPU" message if `quanta::init()` fails, so
# `cargo run --example block_sum --features gpu` always builds;
# add `--features gpu-metal` (or `gpu-vulkan`) to actually
# dispatch. `cpu_oracle` is pure-Rust and feature-free.
[[example]]
name = "block_sum"
required-features = ["gpu"]

[[example]]
name = "prefix_scan"
required-features = ["gpu"]

[[example]]
name = "bucket_sort"
required-features = ["gpu"]

[[example]]
name = "cpu_oracle"
